<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_quotes">

    <fragment
        android:id="@+id/nav_quotes"
        android:name="com.devcraft.freesignalsfortrading.presentation.ui.quotes.QuotesFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_quotes" />

    <fragment
        android:id="@+id/nav_alerts"
        android:name="com.devcraft.freesignalsfortrading.presentation.ui.alert.AlertFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_alerts" />

    <fragment
        android:id="@+id/nav_fav"
        android:name="com.devcraft.freesignalsfortrading.presentation.ui.favorite.FavoriteFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/privacy_policy"
        android:name="com.devcraft.freesignalsfortrading.presentation.ui.privacyPolicy.PrivacyPolicyFragment"
        android:label="Privacy policy"
        tools:layout="@layout/fragment_privacy_policy" />
</navigation>