<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.alert.NotificationSetting"
    android:orientation="vertical"
    android:background="@drawable/back_notify_setting">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/header">

        <ImageView
            android:id="@+id/btn_back_to"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:src="@drawable/btn_back_to"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:text="@string/add_alert"
            style="@style/TopItemText"/>

        <ImageView
            android:id="@+id/btn_add_quotes"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:src="@drawable/btn_add_alert"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/quote_symbol_selected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            style="@style/defaultText"
            android:text="USD"
            />

        <TextView
            android:id="@+id/quote_value_selected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            style="@style/defaultText"
            android:text="1.54343"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/itemNotifySettingScreen">

        <TextView
            android:id="@+id/set_price_text"
            style="@style/defaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/noto_sans_jp_bold"
            android:text="@string/price" />

        <EditText
            android:id="@+id/input_custom_price"
            style="@style/defaultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_jp_bold"
            android:textAlignment="viewEnd"
            android:inputType="numberDecimal"
            android:text="0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            style="@style/defaultText"
            android:textAllCaps="true"
            android:text="@string/pause_in_minutes"
            />

        <EditText
            android:id="@+id/input_custom_pause_notification"
            style="@style/defaultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_jp_bold"
            android:textAlignment="viewEnd"
            android:inputType="number"
            android:text="0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/itemNotifySettingScreen">

        <EditText
            android:id="@+id/input_custom_content_text_notify"
            style="@style/defaultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_jp_light"
            android:textAlignment="viewStart"
            android:text="@string/comment"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans_jp_light"
        android:textAlignment="viewStart"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:paddingHorizontal="16dp"
        android:text="@string/price_is_the_target_price_under_achievement_of_which_the_notification_will_be_delivered"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="@font/noto_sans_jp_light"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:paddingHorizontal="16dp"
        android:text="@string/pause_in_minutes_on_default_is_0_minutes_enter_a_pause_in_minutes"/>

</LinearLayout>